[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MENUPAUSA.gd" type="Script" id=1]

[node name="MENUPAUSA" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.572549, 0, 0.0352941, 0.552941 )

[node name="MenuPausa" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -34.0
margin_right = 53.5
margin_bottom = 34.0

[node name="Continuar" type="Button" parent="ColorRect/MenuPausa"]
margin_right = 110.0
margin_bottom = 20.0
text = "Continuar"

[node name="Guardar partida" type="Button" parent="ColorRect/MenuPausa"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 44.0
text = "Guardar partida"

[node name="Cargar partida" type="Button" parent="ColorRect/MenuPausa"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 68.0
text = "Cargar partida"

[node name="Opciones" type="Button" parent="ColorRect/MenuPausa"]
margin_top = 72.0
margin_right = 110.0
margin_bottom = 92.0
text = "Opciones"

[node name="Menú Principal" type="Button" parent="ColorRect/MenuPausa"]
margin_top = 96.0
margin_right = 110.0
margin_bottom = 116.0
text = "Menú principal"

[node name="Opciones" type="Control" parent="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Opciones"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -22.0
margin_right = 24.5
margin_bottom = 22.0

[node name="Video" type="Button" parent="ColorRect/Opciones/VBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
text = "Video"

[node name="Audio" type="Button" parent="ColorRect/Opciones/VBoxContainer"]
margin_top = 24.0
margin_right = 49.0
margin_bottom = 44.0
text = "Audio"

[node name="VolverDeOpciones" type="Button" parent="ColorRect/Opciones"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -20.0
margin_right = 26.0
text = "Volver"

[node name="Video" type="Control" parent="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -40.0
margin_right = 48.5
margin_bottom = 40.0

[node name="Labels" type="VBoxContainer" parent="ColorRect/Video/HBoxContainer"]
margin_right = 69.0
margin_bottom = 80.0

[node name="FullScreen" type="Label" parent="ColorRect/Video/HBoxContainer/Labels"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
size_flags_vertical = 6
text = "FullScreen"

[node name="Borderless" type="Label" parent="ColorRect/Video/HBoxContainer/Labels"]
margin_top = 33.0
margin_right = 69.0
margin_bottom = 47.0
size_flags_vertical = 6
text = "Borderless"

[node name="VSync" type="Label" parent="ColorRect/Video/HBoxContainer/Labels"]
margin_top = 61.0
margin_right = 69.0
margin_bottom = 75.0
size_flags_vertical = 6
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="ColorRect/Video/HBoxContainer"]
margin_left = 73.0
margin_right = 97.0
margin_bottom = 80.0

[node name="FullScreen" type="CheckBox" parent="ColorRect/Video/HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Borderless" type="CheckBox" parent="ColorRect/Video/HBoxContainer/Checks"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="VSync" type="CheckBox" parent="ColorRect/Video/HBoxContainer/Checks"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="VolverDeVideo" type="Button" parent="ColorRect/Video"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -20.0
margin_right = 26.0
text = "Volver"

[node name="Audio" type="Control" parent="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -28.0
margin_right = 93.0
margin_bottom = 28.0

[node name="Labels" type="VBoxContainer" parent="ColorRect/Audio/HBoxContainer"]
margin_right = 58.0
margin_bottom = 56.0

[node name="Master" type="Label" parent="ColorRect/Audio/HBoxContainer/Labels"]
margin_top = 1.0
margin_right = 58.0
margin_bottom = 15.0
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="ColorRect/Audio/HBoxContainer/Labels"]
margin_top = 21.0
margin_right = 58.0
margin_bottom = 35.0
size_flags_vertical = 6
text = "Music"

[node name="Sound FX" type="Label" parent="ColorRect/Audio/HBoxContainer/Labels"]
margin_top = 41.0
margin_right = 58.0
margin_bottom = 55.0
size_flags_vertical = 6
text = "Sound FX"

[node name="Checks" type="VBoxContainer" parent="ColorRect/Audio/HBoxContainer"]
margin_left = 62.0
margin_right = 186.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="ColorRect/Audio/HBoxContainer/Checks"]
margin_right = 124.0
margin_bottom = 16.0

[node name="Music" type="HSlider" parent="ColorRect/Audio/HBoxContainer/Checks"]
margin_top = 20.0
margin_right = 124.0
margin_bottom = 36.0

[node name="Sound FX" type="HSlider" parent="ColorRect/Audio/HBoxContainer/Checks"]
margin_top = 40.0
margin_right = 124.0
margin_bottom = 56.0

[node name="VolverDeAudio" type="Button" parent="ColorRect/Audio"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -20.0
margin_right = 26.0
text = "Volver"

[connection signal="pressed" from="ColorRect/MenuPausa/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="ColorRect/MenuPausa/Guardar partida" to="." method="_on_Guardar_partida_pressed"]
[connection signal="pressed" from="ColorRect/MenuPausa/Cargar partida" to="." method="_on_Cargar_partida_pressed"]
[connection signal="pressed" from="ColorRect/MenuPausa/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="ColorRect/MenuPausa/Menú Principal" to="." method="_on_Men_Principal_pressed"]
[connection signal="pressed" from="ColorRect/Opciones/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="ColorRect/Opciones/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="ColorRect/Opciones/VolverDeOpciones" to="." method="_on_VolverDeOpciones_pressed"]
[connection signal="toggled" from="ColorRect/Video/HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="ColorRect/Video/HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="ColorRect/Video/HBoxContainer/Checks/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="ColorRect/Video/VolverDeVideo" to="." method="_on_VolverDeVideo_pressed"]
[connection signal="value_changed" from="ColorRect/Audio/HBoxContainer/Checks/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="ColorRect/Audio/HBoxContainer/Checks/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="ColorRect/Audio/HBoxContainer/Checks/Sound FX" to="." method="_on_Sound_FX_value_changed"]
[connection signal="pressed" from="ColorRect/Audio/VolverDeAudio" to="." method="_on_VolverDeAudio_pressed"]
